[package]
name = "hot-lib-reloader-plug-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-manager = { path = "./lib-manager"}
crc32fast = "1.3.2"
hot-lib-reloader-macro = { path = "./macro-util" }
libloading = "^0.7"
log = "0.4.17"
notify = "^4"
common_define = {path = "./common_define"}

# compromise = {path = "./compromise"}
[dev-dependencies]
env_logger = "^0.9"

[workspace]
resolver = "2"
members = ["macro-util", "lib-manager", "common_define"]



[features]
default = []
verbose = []