[package]
name = "lib-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "^0.7"
notify = "^4"
log = "0.4.17"
const_format = "0.2.30"
libc = "0.2.139"
shadow-rs = "0.8.0"
serde_json= "1.0.79"
abi_stable = "0.11.1"
structopt = "0.3.26"
core_extensions={ version = "1.5.2", default_features = false, features = ["std"] }
serde={ version = "1.0.136", features = ["derive"] }
smallvec= "1.8.0"
common_define = { path = "../common_define"}
[build-dependencies]
shadow-rs = "0.8.1"